// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`targetNew renders 0 1`] = `
Array [
  .c0 {
  target-new: 0;
}

<div
    className="c0"
  />,
  .c0 {
  target-new: 0;
}

<div
    className="c0"
  />,
  .c0 {
  target-new: 0;
}

<div
    className="c0"
  />,
  .c0 {
  target-new: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`targetNew renders function 1`] = `
Array [
  .c0 {
  target-new: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  target-new: has;
}

<div
    className="c0"
  />,
  .c0 {
  target-new: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  target-new: has;
}

<div
    className="c0"
  />,
]
`;

exports[`targetNew renders invalid theme path 1`] = `
Array [
  .c0 {
  target-new: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  target-new: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  target-new: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  target-new: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`targetNew renders negative number 1`] = `
Array [
  .c0 {
  target-new: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  target-new: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  target-new: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  target-new: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`targetNew renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  target-new: July;
}

@media screen and (min-width:November) {
  .c0 {
    target-new: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-new: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-new: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    target-new: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  target-new: July;
}

@media screen and (min-width:November) {
  .c0 {
    target-new: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-new: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-new: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    target-new: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  target-new: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    target-new: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-new: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-new: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    target-new: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  target-new: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    target-new: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-new: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-new: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    target-new: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`targetNew renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    target-new: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-new: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-new: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    target-new: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    target-new: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-new: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-new: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    target-new: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    target-new: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-new: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-new: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    target-new: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    target-new: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-new: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-new: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    target-new: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`targetNew renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  target-new: July;
}

@media May {
  .c0 {
    target-new: August;
  }
}

@media April {
  .c0 {
    target-new: September;
  }
}

@media January {
  .c0 {
    target-new: November;
  }
}

@media April {
  .c0 {
    target-new: August;
  }
}

@media June {
  .c0 {
    target-new: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  target-new: July;
}

@media May {
  .c0 {
    target-new: August;
  }
}

@media April {
  .c0 {
    target-new: September;
  }
}

@media January {
  .c0 {
    target-new: November;
  }
}

@media April {
  .c0 {
    target-new: August;
  }
}

@media June {
  .c0 {
    target-new: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  target-new: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    target-new: November;
  }
}

@media April {
  .c0 {
    target-new: January;
  }
}

@media January {
  .c0 {
    target-new: December;
  }
}

@media April {
  .c0 {
    target-new: April;
  }
}

@media June {
  .c0 {
    target-new: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  target-new: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    target-new: November;
  }
}

@media April {
  .c0 {
    target-new: January;
  }
}

@media January {
  .c0 {
    target-new: December;
  }
}

@media April {
  .c0 {
    target-new: April;
  }
}

@media June {
  .c0 {
    target-new: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`targetNew renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    target-new: July;
  }
}

@media April {
  .c0 {
    target-new: August;
  }
}

@media January {
  .c0 {
    target-new: September;
  }
}

@media April {
  .c0 {
    target-new: November;
  }
}

@media June {
  .c0 {
    target-new: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    target-new: July;
  }
}

@media April {
  .c0 {
    target-new: August;
  }
}

@media January {
  .c0 {
    target-new: September;
  }
}

@media April {
  .c0 {
    target-new: November;
  }
}

@media June {
  .c0 {
    target-new: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    target-new: January;
  }
}

@media April {
  .c0 {
    target-new: December;
  }
}

@media January {
  .c0 {
    target-new: April;
  }
}

@media April {
  .c0 {
    target-new: May;
  }
}

@media June {
  .c0 {
    target-new: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    target-new: January;
  }
}

@media April {
  .c0 {
    target-new: December;
  }
}

@media January {
  .c0 {
    target-new: April;
  }
}

@media April {
  .c0 {
    target-new: May;
  }
}

@media June {
  .c0 {
    target-new: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`targetNew renders postitive number 1`] = `
Array [
  .c0 {
  target-new: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  target-new: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  target-new: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  target-new: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`targetNew renders string 1`] = `
Array [
  .c0 {
  target-new: July;
}

<div
    className="c0"
  />,
  .c0 {
  target-new: July;
}

<div
    className="c0"
  />,
  .c0 {
  target-new: June;
}

<div
    className="c0"
  />,
  .c0 {
  target-new: June;
}

<div
    className="c0"
  />,
]
`;

exports[`targetNew renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`targetNew renders valid theme path 1`] = `
Array [
  .c0 {
  target-new: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  target-new: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  target-new: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  target-new: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
